# qa-support-automation-toolkit

./: README.md
docs/: sample_report.md
outputs/: sample_report.md
src/support_ops_toolkit/: analysis.py  models.py
support_ops_toolkit/: README.md  pyproject.toml
support_ops_toolkit/docs/: portfolio_pitch_cn.md  portfolio_pitch_en.md  qa_test_plan.md
support_ops_toolkit/sample_data/: tickets.csv
support_ops_toolkit/src/support_ops_toolkit/: __init__.py  cli.py  loader.py
tests/: test_toolkit.py
